# schnellwerke

./: Cargo.toml  LICENSE  README.md  index.html
assets/: cube.txt  icon.tiff  interact.tiff  m.txt  pause.tiff  text.json  text.tiff  textcyr.xcf  textcyrn.xcf  textlat.tiff  train.mtl  train_door.mtl  train_door_gl.mtl  train_ground.mtl  train_quest.mtl
assets/charlie/: charlie.sdf.txt  pixel1.ssf.txt  pixel2.ssf.txt
assets/charlie/banners/: model1.txt  model2.txt
assets/charlie/building/: model1.txt  model2.txt
assets/charlie/checkpoint/: model1.txt
assets/charlie/fence/: model1.txt
assets/charlie/flags/: model1.txt  model2.txt  model3.txt
assets/charlie/ground/: model1.txt
assets/charlie/paving/: model1.txt
assets/charlie/road/: model1.txt
assets/charlie/stics/: model1.txt  (+3 more)
assets/res/: nometal.tiff
assets/sponzaweb/: ceiling.txt  columnb.txt  columnc.txt  floor.txt  roof.txt  vase.txt
pkg/: package.json  schnellwerke.d.ts  schnellwerke.js  schnellwerke_bg.wasm  schnellwerke_bg.wasm-opt.wasm  schnellwerke_bg.wasm.d.ts
shaders/: deff_em.frag  deff_qo.frag  deffered.frag  deffered.vert  pltx.frag  shader.frag  shader.vert  shader_new.frag  shadow.vert  text.frag
src/: app_state.rs  init.rs  lib.rs
src/engine/: animation.rs  audiosource3d.rs  camera.rs  cube.rs  engine.rs  image.rs  light.rs  material.rs  mod.rs  model.rs  object.rs  physics.rs  plane.rs  scene.rs  shader_builder.rs  speaker.rs  ui.rs
src/loop_tick/: control_handle.rs  handle_scene.rs  menu_handle.rs  mod.rs  per_select_tick.rs  sav.js  save_load.rs  soundwork.rs  tick.rs
(+119 files in other folders)
