[package]
name = "schnellwerke"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.42"
wasm-timer = "0.2.5"

[dependencies.web-sys]
version = "0.3.68"
features = ["Window", "KeyboardEvent", "EventListener"]
